# Convo_analytics

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/app/: constants.py  logging_config.py
src/app/agents/: non_data_agent.py  router_agent.py  sql_planner_agent.py  synthesizer_agent.py
src/app/db/: engine.py  schema_introspector.py  sql_runner.py
src/app/etl/: load_csv_to_db.py
src/app/graph/: builder.py  state.py
src/app/llm/: bedrock_client.py
src/app/prompts/: router.jinja  sql_planner.jinja  synthesizer.jinja
src/app/ui/: agent_trace_ui.py  explain_panel.py  streamlit_app.py
